30 April 2009

* Properly count mails when polling multiple folders on a single IMAP server,
  reported by Claudio M. Alessi.

24 March 2009

* Support user and pass on NNTP, requested by Michael Hamann.

08 March 2009

* Escape . properly when delivering to SMTP.

27 December 2008

* Don't be as strict about format at the end of messages when using IMAP -
  accept additional information as well as FLAGS. Reported by rivo nurges.

22 December 2008

* fdm 1.6 released.

17 December 2008

* Only look at HOME environment variable if -h flag is passed.

28 October 2008

* Alter IMAP fetching code to build a UID list of mails to fetch and then fetch
  them, rather than iterating through all the mails regardless.

07 September 2008

* Process all privsep messages in parent rather than just the first.
  Fixes timeouts reported by Frank Terbeck.

08 August 2008

* Sort fetch list for POP3 to preserve server mailbox order, requested
  by Jeremy C Reed.
* Fix bug where current user could overwrite default-user/command-user
  from configuration file.

26 June 2008

* Lookup using courier-authlib. Build with make -DLOOKUP_COURIER and
  use "set lookup-order courier passwd".
* Framework for changing user lookup method. At the moment only normal
  Unix passwd (getpwnam(3)) is supported. This means only string
  usernames are supported - to enter a numeric Unix UID, enclose it
  in quotes.
* Get rid of from-headers which was ugly and unreliable.

30 May 2008

* Make NNTP fetching save the cache file after each mail since some NNTP
  servers (such as my ISP's) are horrendously unreliable.
* Handle 423/430 response from ARTICLE command in NNTP correctly.

26 May 2008

* New option: parallel-accounts. Sets number of accounts to fetch in parallel.

22 May 2008

* deliver-imap fetch method; suggested by Jason Dixon a while ago.

03 April 2008

* Support an extra space on the optional FLAGS response when fetching a mail,
  fixes problems with CommuniGate Pro, thanks to Anthony Wood.