@@ -1569,11 +1569,16 @@ See the re_format(7) man page. It is online here (for OpenBSD):
 
 There are also a number of books and probably websites on the subject.
 
-%%% Keep doesn't work with gmail!
+%%% Keep doesn't work with GMail!
 
-This is because gmail is broken, see:
+This is because GMail is broken, see:
 
 	http://pyropus.ca/software/getmail/faq.html#faq-notabug-gmail-bug
+
+In addition, GMail IMAP doesn't set the \Seen flag when mail is fetched with
+the UID FETCH BODY[] command (RFC3501 says that the "\Seen flag is implicitly
+set"). fdm works around this bug by setting the flag explicitly when mail is
+kept.
 
 %%% Why doesn't fdm run as a daemon?
 
@@ -1624,5 +1629,5 @@ Because I hate maintaining and testing two sets of code, there is a strong
 possibility that PCRE may become the fdm default at some point.
 
 ================================================================================
-$Id: MANUAL.in,v 1.77 2009-03-24 18:57:08 nicm Exp $
+$Id: MANUAL.in,v 1.78 2009-05-02 20:08:39 nicm Exp $
 
